+ manifest + theme developing

--- a/_config.yml
+++ b/_config.yml
@@ -22,14 +22,29 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 #twitter_username: jet2hangar
 github_username:  jet2hangar
 
+# Permalink style 
+permalink: pretty
+
 # Build settings
 markdown: kramdown
+
+# Conversion
+markdown: kramdown
+highlighter: rouge
+kramdown:
+  input: GFM
+  hard_wrap: false
+  syntax_highlighter: rouge
+
 #theme: minima
 plugins:
   - jekyll-feed
 
 sass:
     sass_dir: ./_styles
+
+# Syntax highliter
+highlighter: rouge
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
