--- a/_config.yml
+++ b/_config.yml
@@ -42,7 +42,8 @@ plugins:
 
 sass:
     sass_dir: ./_styles
-
+    style: compressed
+    
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
 # to override the default setting.
