--- a/_includes/json/manifest.json
+++ b/_includes/json/manifest.json
@@ -8,37 +8,37 @@
     "start_url": "/?utm_source=pwa",
     "icons": [
       {
-        "src": "../favicons/icon-48x48.png",
+        "src": "../favicons/manifest/icon-pwa-48x48.png",
         "sizes": "48x48",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-72x72.png",
+        "src": "../favicons/manifest/icon-pwa-72x72.png",
         "sizes": "72x72",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-96x96.png",
+        "src": "../favicons/manifest/icon-pwa-96x96.png",
         "sizes": "96x96",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-144x144.png",
+        "src": "../favicons/manifest/icon-pwa-144x144.png",
         "sizes": "144x144",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-168x168.png",
+        "src": "../favicons/manifest/icon-pwa-168x168.png",
         "sizes": "168x168",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-192x192.png",
+        "src": "../favicons/manifest/icon-pwa-192x192.png",
         "sizes": "192x192",
         "type": "image/png"
       },
       {
-        "src": "../favicons/icon-512x512.png",
+        "src": "../favicons/manifest/icon-pwa-512x512.png",
         "sizes": "512x512",
         "type": "image/png"
       }
