U - Manifest start_url

--- a/_includes/json/manifest.json
+++ b/_includes/json/manifest.json
@@ -5,7 +5,7 @@
     "background_color": "#2b6fb1",
     "description": "Progressive web app proof of concept",
     "display": "fullscreen",
-    "start_url": "../../",
+    "start_url": ".",
     "icons": [
       {
         "src": "../favicons/manifest/icon-pwa-48x48.png",
