--- a/_includes/json/manifest.json
+++ b/_includes/json/manifest.json
@@ -4,8 +4,8 @@
     "theme_color": "#3d8ede",
     "background_color": "#2b6fb1",
     "description": "Progressive web app proof of concept",
-    "display": "fullscreen",
-    "start_url": ".",
+    "display": "browser",
+    "start_url": "/",
     "icons": [
       {
         "src": "../favicons/manifest/icon-pwa-48x48.png",
