--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  jet2hangar
 
 # Permalink style 
-permalink: pretty
+# Options: https://jekyllrb.com/docs/permalinks/#builtinpermalinkstyles
+permalink: none
 
 # Build settings
 markdown: kramdown
